@@ -39,6 +39,7 @@ export(getDataFrame)
 export(getDataFrame1)
 export(getDataFrameAtLevel)
 export(getFunsRstox)
+export(getHIXSDfile)
 export(getJavaMemory)
 export(getMatrixList)
 export(getModelType)
